# python-demo

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  file_organizer.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  test_file_organizer.py  workflow.yml
.github/workflows/: ci.yml
docs/: README.md  installation.md
scripts/: run_tests.py
src/: __init__.py
src/file_organizer/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_file_organizer_integration.py  test_file_organizer_unit.py
